z-index problem solved and a new theme added

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -116,6 +116,7 @@ a:hover {
   transform-origin: left top;
   height: auto;
   border-radius: 8px;
+  z-index: 1;
 }
 
 .toolbar__themes li {
